--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="css/style.css">
+    <link href="css/style.css" rel="stylesheet">
     <title>Jerwin Mathew Aton | Porfolio</title>
   </head>
+
   <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar navbar-custom">
           <div class="container">
-            <a class="navbar-brand" href="#">Portfolio</a>
+            <h1><a class="navbar-brand navbar-brand-custom" href="#">My Portfolio</a></h1>
+            <p id="navbar-p">Hosted by Github Pages</p>
           </div>
         </nav>
     </header>
     <section>
-        <div class="jumbotron">
+        <div class="jumbotron jumbotron-fluid jumbotron-custom text-center">
             <div class="container">
-                <h1 class="display-4">Hello, world!</h1>
+                <h1 class="display-4">Jerwin Mathew Aton</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
                 <hr class="my-4">
                 <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
@@ -27,6 +29,32 @@
                 </p>
                 </div>
           </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="content">
+                    <a href="" class="">Project</a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                    <a href="" class="">Project</a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                    <a href="" class="">Project</a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                    <a href="" class="">Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Optional JavaScript -->
