--- a/index.html
+++ b/index.html
@@ -33,24 +33,60 @@
     <section class="projects">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="content">
-                    <a href="" class="">Project</a>
+                    <a href="" class="">Project 1</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="content">
-                    <a href="" class="">Project</a>
+                    <a href="" class="">Project 2</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="content">
-                    <a href="" class="">Project</a>
+                    <a href="" class="">Project 3</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="content">
-                    <a href="" class="">Project</a>
+                    <a href="" class="">Project 4</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="content">
+                    <a href="" class="">Project 5</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="content">
+                    <a href="" class="">Project 6</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="content">
+                    <a href="" class="">Project 7</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="content">
+                    <a href="" class="">Project 8</a>
+                    <p>It uses utility classes for typography and spacing to space 
+                        content out within the larger container.</p>
                     </div>
                 </div>
             </div>
