updated UI Design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <hr class="my-4">
                 <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Contact Now</a>
                 </p>
                 </div>
           </div>
@@ -33,65 +33,111 @@
     <section class="projects">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                <a href="#" class="col-lg-6 col-md-6">
                     <div class="content">
-                    <a href="" class="">Project 1</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
+                        <label>Project 1</label>
+                        <img class="img-proj" src="assets/project1.png">
+                        
+                        <p>It uses utility classes for typography and spacing to space 
+                            content out within the larger container.</p>  
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                </a>
+                <a href="#" class="col-lg-6 col-md-6">
                     <div class="content">
-                    <a href="" class="">Project 2</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
+                        <label>Project 2</label>
+                        <img class="img-proj" src="assets/project2.png">
+                    
+                        <p>It uses utility classes for typography and spacing to space 
+                            content out within the larger container.</p>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 3</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 4</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 5</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 6</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 7</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="content">
-                    <a href="" class="">Project 8</a>
-                    <p>It uses utility classes for typography and spacing to space 
-                        content out within the larger container.</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+  
+      <!-- Grid row -->
+      <div class="row">
+  
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+  
+          <!-- Content -->
+          <h5 class="text-uppercase">Footer Content</h5>
+          <p>Here you can use rows and columns to organize your footer content.</p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase">Links</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+  
+          <!-- Links -->
+          <h5 class="text-uppercase">Links</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
