Changed the jpeg to jpeg in img-proj5
I will fix the name of img 5 in a computer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="#" class="col-lg-6 col-md-6">
                     <div class="content">
                         <label>Project 5</label>
-                        <img class="img-proj" src="assets/project5.jpeg">
+                        <img class="img-proj" src="assets/project5.jpg">
                         
                         <p>It uses utility classes for typography and spacing to space 
                             content out within the larger container.</p>  
