--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <div class="jumbotron jumbotron-fluid jumbotron-custom text-center">
             <div class="container">
-                <h1 class="display-4">Jerwin Mathew Aton</h1>
+                <h1 class="display-4 display-4-custom">Jerwin Mathew Aton</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
                 <hr class="my-4">
                 <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
