--- a/index.html
+++ b/index.html
@@ -18,17 +18,27 @@
         </nav>
     </header>
     <section>
-        <div class="jumbotron jumbotron-fluid jumbotron-custom text-center">
+        <div class="jumbotron jumbotron-fluid jumbotron-custom text-left">
             <div class="container">
+             <div class="row">
+               <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                 <h1 class="display-4 display-4-custom">Jerwin Mathew Aton</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-                <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+               </div>
+               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that will help and satisfy you.</p>
+               </div>
+                
+               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
+                <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript framework Angular.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Contact Now</a>
+                <a class="btn btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
                 </p>
-                </div>
-          </div>
+               </div>
+               
+              </div>
+             </div>
+         </div>
     </section>
     <section class="projects">
         <div class="container">
