--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
              <div class="row">
                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                <h1 class="display-4 display-4-custom">Jerwin Mathew Aton</h1>
+                <h1 class="display-2 display-4-custom">Jerwin Mathew Aton</h1>
                </div>
                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                 <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that will help and satisfy you.</p>
@@ -32,7 +32,7 @@
                 <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
                 <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript framework Angular.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
+                <a class="btn btn-primary btn-lg btn-custom justify-content-center" href="#" role="button">Let's Talk</a>
                 </p>
                </div>
                
