--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                 <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
                 <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript framework Angular.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg btn-custom justify-content-center" href="#" role="button">Let's Talk</a>
-                </p>
+                <div class="row justify-content-center>"
+                <a class="btn btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
+                </div>
+               </p>
                </div>
                
               </div>
