--- a/index.html
+++ b/index.html
@@ -18,24 +18,26 @@
         </nav>
     </header>
     <section>
-        <div class="jumbotron jumbotron-fluid jumbotron-custom text-left">
+        <div class="jumbotron jumbotron-fluid jumbotron-custom">
             <div class="container">
              <div class="row">
-               <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+               <div class="col-10 text-left">
                 <h1 class="display-2 display-4-custom">Jerwin Mathew Aton</h1>
                </div>
-               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+               <div class="col-8 text-left">
                 <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that will help and satisfy you.</p>
                </div>
                 
-               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+               <div class="col-8">
                 <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
                 <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript framework Angular.</p>
-                <p class="lead">
-                <div class="row justify-content-center>"
-                <a class="btn btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
                 </div>
-               </p>
+                <div class = "col-8 justify-content-center>"
+                <p class="lead">
+
+                <a class="btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
+
+                </p>
                </div>
                
               </div>
