--- a/index.html
+++ b/index.html
@@ -22,24 +22,15 @@
   <section>
     <div class="jumbotron jumbotron-fluid jumbotron-custom">
       <div class="container">
-        <div class="row">
-          <div class="col-10 text-left">
-            <h1 class="display-2 jumbotron-h1-custom">Jerwin Mathew Aton</h1>
-          </div>
-          <div class="col-8 text-left">
-            <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end
-              development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that
-              will help and satisfy you.</p>
-          </div>
-          <div class="col-8">
-            <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
+        <h1 class="jumbotron-h1-custom">Jerwin Mathew Aton</h1>
+        <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end
+          development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that
+          will help and satisfy you</p>
+
+          <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
             <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
               framework Angular.</p>
-          </div>
-        </div>
-        <p class="lead">
-          <a class="btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
-        </p>
+          <a class="btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>     
       </div>
     </div>
   </section>
