font-sizes updated

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header>
     <nav class="navbar navbar-custom">
-      <div class="container">
-        <h1><a class="navbar-brand navbar-brand-custom" href="#">My Portfolio</a></h1>
+     <div class="container"> 
+        <h1><a class="navbar-brand navbar-brand-custom" href="#"><img src="assets/logo.png">My Portfolio</a></h1>
         <p id="navbar-p">Hosted by Github Pages</p>
       </div>
     </nav>
