--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar navbar-custom">
      <div class="container"> 
-        <h1><a class="navbar-brand navbar-brand-custom" href="#"><img class="d-block d-md-none" src="assets/logo.png">My Portfolio</a></h1>
+        <h1><a class="navbar-brand navbar-brand-custom" href="#"><img class="d-inline d-inline-sm d-md-none" src="assets/logo.png">My Portfolio</a></h1>
         <p id="navbar-p">Hosted by Github Pages</p>
       </div>
     </nav>
