--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="navbar navbar-custom">
-     <div class="container"> 
+     <div class="container d-sm-flex justify-content-center justify-content-md-between"> 
         <h1><a class="navbar-brand navbar-brand-custom" href="#"><img class="d-inline d-sm-inline d-md-none" src="assets/logo.png">My Portfolio</a></h1>
         <p id="navbar-p">Hosted by Github Pages</p>
       </div>
