--- a/index.html
+++ b/index.html
@@ -91,6 +91,33 @@
               content out within the larger container.</p>
           </div>
         </a>
+        <a href="#" class="col-lg-6 col-md-6">
+          <div class="content">
+            <label>Project 6</label>
+            <img class="img-proj" src="assets/project6.png">
+
+            <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.</p>
+          </div>
+        </a>
+        <a href="#" class="col-lg-6 col-md-6">
+          <div class="content">
+            <label>Project 6</label>
+            <img class="img-proj" src="assets/project6.png">
+
+            <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.</p>
+          </div>
+        </a>
+        <a href="#" class="col-lg-6 col-md-6">
+          <div class="content">
+            <label>Project 6</label>
+            <img class="img-proj" src="assets/project6.png">
+
+            <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.</p>
+          </div>
+        </a>
       </div>
     </div>
   </section>
