reverted all to light mode

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <img class="img-proj" src="assets/project1.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -53,6 +55,8 @@
             <img class="img-proj" src="assets/project2.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -62,6 +66,8 @@
             <img class="img-proj" src="assets/project3.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -71,6 +77,8 @@
             <img class="img-proj" src="assets/project4.jpeg">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -80,6 +88,8 @@
             <img class="img-proj" src="assets/project5.jpg">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -89,6 +99,8 @@
             <img class="img-proj" src="assets/project6.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -98,6 +110,8 @@
             <img class="img-proj" src="assets/project6.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -107,6 +121,8 @@
             <img class="img-proj" src="assets/project6.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -116,6 +132,8 @@
             <img class="img-proj" src="assets/project6.png">
 
             <p>It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
