Justify p on content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <label>Project 1</label>
             <img class="img-proj" src="assets/project1.png">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
               It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -54,7 +54,7 @@
             <label>Project 2</label>
             <img class="img-proj" src="assets/project2.png">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
               It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -65,7 +65,7 @@
             <label>Project 3</label>
             <img class="img-proj" src="assets/project3.png">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
             It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -76,7 +76,7 @@
             <label>Project 4</label>
             <img class="img-proj" src="assets/project4.jpeg">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
             It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -87,7 +87,18 @@
             <label>Project 5</label>
             <img class="img-proj" src="assets/project5.jpg">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
+              content out within the larger container.
+            It uses utility classes for typography and spacing to space
+              content out within the larger container.</p>
+          </div>
+        </a>
+        <a href="#" class="col-lg-6 col-md-6">
+          <div class="content">
+            <label>Project 6</label>
+            <img class="img-proj" src="assets/project6.png">
+
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
             It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -109,7 +120,7 @@
             <label>Project 6</label>
             <img class="img-proj" src="assets/project6.png">
 
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
             It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -120,18 +131,7 @@
             <label>Project 6</label>
             <img class="img-proj" src="assets/project6.png">
 
-            <p>It uses utility classes for typography and spacing to space
-              content out within the larger container.
-            It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 6</label>
-            <img class="img-proj" src="assets/project6.png">
-
-            <p>It uses utility classes for typography and spacing to space
+            <p class= "text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
             It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
