--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
   <header>
     <nav class="navbar navbar-custom">
-     <div class="container d-sm-flex justify-content-center justify-content-md-between"> 
-        <h1><a class="navbar-brand navbar-brand-custom" href="#"><img class="d-inline d-sm-inline d-md-none" src="assets/logo.png">My Portfolio</a></h1>
+      <div class="container d-sm-flex justify-content-center justify-content-md-between">
+        <h1><a class="navbar-brand navbar-brand-custom" href="#"><img class="d-inline d-sm-inline d-md-none"
+              src="assets/logo.png">My Portfolio</a></h1>
         <p id="navbar-p">Hosted by Github Pages</p>
 
       </div>
@@ -28,10 +29,13 @@
           development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that
           will help and satisfy you</p>
 
-          <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
-            <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
-              framework Angular.</p>
-          <a class="btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>     
+        <p class="lead">This Developer is currently under construction. Will be available on 2022</p>
+        <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
+          framework Angular.</p>
+        <div class="buttons d-flex justify-content-center">
+          <a class="btn-primary btn-lg btn-custom1" href="#" role="button">Let's Talk</a>
+          <a class="btn-primary btn-lg btn-custom1" href="#" role="button">My Projects</a>
+        </div>
       </div>
     </div>
   </section>
@@ -43,7 +47,7 @@
             <label>Project 1</label>
             <img class="img-proj" src="assets/project1.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
               It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -54,7 +58,7 @@
             <label>Project 2</label>
             <img class="img-proj" src="assets/project2.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
               It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
@@ -65,9 +69,9 @@
             <label>Project 3</label>
             <img class="img-proj" src="assets/project3.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -76,9 +80,9 @@
             <label>Project 4</label>
             <img class="img-proj" src="assets/project4.jpeg">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -87,9 +91,9 @@
             <label>Project 5</label>
             <img class="img-proj" src="assets/project5.jpg">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -98,9 +102,9 @@
             <label>Project 6</label>
             <img class="img-proj" src="assets/project6.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -111,7 +115,7 @@
 
             <p>It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -120,9 +124,9 @@
             <label>Project 6</label>
             <img class="img-proj" src="assets/project6.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
@@ -131,9 +135,9 @@
             <label>Project 6</label>
             <img class="img-proj" src="assets/project6.png">
 
-            <p class= "text-justify">It uses utility classes for typography and spacing to space
+            <p class="text-justify">It uses utility classes for typography and spacing to space
               content out within the larger container.
-            It uses utility classes for typography and spacing to space
+              It uses utility classes for typography and spacing to space
               content out within the larger container.</p>
           </div>
         </a>
