set h1 to justify-center

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section>
     <div class="jumbotron jumbotron-fluid jumbotron-custom">
       <div class="container">
-        <h1 class="jumbotron-h1-custom">Jerwin Mathew Aton</h1>
+        <h1 class="jumbotron-h1-custom text-center">Jerwin Mathew Aton</h1>
         <p class="lead">Hi!, I design websites with stunning UI designs, and is currently still learning back-end
           development. I am looking forward to be a full-stack Web Developer. I want to create beautiful things that
           will help and satisfy you</p>
