--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
           framework Angular.</p>
         <div class="buttons d-flex justify-content-center">
-          <a class="btn-primary btn-lg" id="btn-custom1" href="#" role="button">Let's Talk</a>
-          <a class="btn-primary btn-lg" id="btn-custom2" href="#" role="button">My Projects</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#" role="button">Let's Talk</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#" role="button">My Projects</a>
         </div>
       </div>
     </div>
