--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
           framework Angular.</p>
         <div class="buttons d-flex justify-content-center">
           <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#" role="button">Let's Talk</a>
-          <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#" role="button">My Projects</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#projects" role="button">My Projects</a>
         </div>
       </div>
     </div>
   
+  <section id="projects" class="projects">
     <div class="container">
       <div class="row">
         <a href="#" class="col-lg-6 col-md-6">
